fix: Chat scrollbar position

--- a/src/components/RightSideContent/Chat/Chat.scss
+++ b/src/components/RightSideContent/Chat/Chat.scss
@@ -22,6 +22,7 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     position: absolute;
+    width: 100%;
 
     p {
       max-width: 18.5rem;
